--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.4.3",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -16,10 +17,10 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-gesture-handler": "^2.12.1",
-    "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0"
+    "react-native-screens": "^3.24.0",
+    "rn-slide-button": "^1.0.3",
+    "rn-swipe-button": "^1.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
